refactor: Account, Store 전체 코드 리팩토링