@@ -1,80 +1,82 @@
 package com.example.mealserve.domain.store;
 
+import com.example.mealserve.domain.account.entity.Account;
 import com.example.mealserve.domain.menu.MenuRepository;
 import com.example.mealserve.domain.menu.dto.MenuResponseDto;
 import com.example.mealserve.domain.menu.entity.Menu;
 import com.example.mealserve.domain.store.dto.StoreRequestDto;
 import com.example.mealserve.domain.store.dto.StoreResponseDto;
 import com.example.mealserve.domain.store.entity.Store;
+import com.example.mealserve.global.exception.CustomException;
+import com.example.mealserve.global.exception.ErrorCode;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
+@RequiredArgsConstructor
 public class StoreService {
+
     private final StoreRepository storeRepository;
     private final MenuRepository menuRepository;
 
-    public StoreService(StoreRepository storeRepository, MenuRepository menuRepository) {
-        this.storeRepository = storeRepository;
-        this.menuRepository = menuRepository;
-    }
-
     @Transactional
-    public StoreResponseDto registerStore(StoreRequestDto storeRequestDto) {
-        Store store = Store.builder()
-                .name(storeRequestDto.getName())
-                .address(storeRequestDto.getAddress())
-                .tel(storeRequestDto.getTel())
-                .build();
+    public StoreResponseDto registerStore(StoreRequestDto storeRequestDto, Account account) {
+        checkIfStoreExist(storeRequestDto);
+        Store store = Store.of(storeRequestDto, account);
 
-        storeRepository.save(store);
+        Store savedStore = storeRepository.save(store);
 
-        return StoreResponseDto.from(store); // 메뉴 정보가 있다면 여기에 추가
+        return StoreResponseDto.from(savedStore);
     }
 
     @Transactional
     public StoreResponseDto updateStore(Long storeId, StoreRequestDto storeRequestDto) {
-        Store store = validateStore(storeId);
+        Store store = getStoreById(storeId);
 
         store.update(storeRequestDto);
 
-        storeRepository.save(store);
-
-        return new StoreResponseDto(store);
+        return StoreResponseDto.from(store);
     }
 
     @Transactional
     public void deleteStore(Long storeId) {
-        Store store = validateStore(storeId);
+        Store store = getStoreById(storeId);
+
         storeRepository.delete(store);
     }
 
     @Transactional(readOnly = true)
     public StoreResponseDto getStore(Long storeId) {
-        Store store = validateStore(storeId);
+        Store store = getStoreById(storeId);
 
         List<Menu> menus = menuRepository.findByStoreId(storeId);
-        List<MenuResponseDto> menuResponseDto = menus.stream()
+        List<MenuResponseDto> menuResponseDtoList = menus.stream()
                 .map(MenuResponseDto::new)
-                .collect(Collectors.toList());
+                .toList();
 
-        return new  StoreResponseDto(store, menuResponseDto);
-
+        return StoreResponseDto.of(store, menuResponseDtoList);
     }
+
     @Transactional(readOnly = true)
-    public Page<StoreResponseDto> getAllStores(Pageable pageable) {
+    public Page<StoreResponseDto> getStores(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
         Page<Store> stores = storeRepository.findAll(pageable);
-        return stores.map(StoreResponseDto::new);
+        return stores.map(StoreResponseDto::from);
     }
 
-    private Store validateStore(Long storeId){
-        return storeRepository.findById(storeId).orElseThrow(()
-                -> new IllegalArgumentException("업장을 찾지 못했습니다."));
+    private void checkIfStoreExist(StoreRequestDto storeRequestDto) {
+        if (storeRepository.existsByName(storeRequestDto.getName())) {
+            throw new CustomException(ErrorCode.STORE_ALREADY_EXISTS);
+        }
     }
 
+    private Store getStoreById(Long storeId){
+        return storeRepository.findById(storeId)
+            .orElseThrow(() -> new CustomException(ErrorCode.STORE_NOT_FOUND));
+    }
 }
